--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                         <a href="https://www.linkedin.com/in/matias-ezequiel-parra-3a5070264/"><span class="text">my linkedin</span></a>
                     </li>
                     <li>
+                        <span class="icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+                        <a href="titulos.html"><span class="text">Titulos</span></a>
+                    </li>
+                    <li>
                         <span class="icon"><i class="fa fa-map-pin" aria-hidden="true"></i></span>
                         <span class="text">Cordoba, Argentina🧉</span>
                     </li>
@@ -137,6 +141,6 @@
             </div>
         </div>
     </div>
-    
+    <script src="app.js"></script>
 </body>
 </html>
